<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">InfoDialog</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="repassword">Repassword</string>
    <string name="registraion">Registraion</string>
    <string name="user_info">User Info</string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="e_mail">E-mail: </string>
    <string name="location">Location: not recognized</string>
</resources>
