<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="166dp"
        android:gravity="center"
        android:text="@string/user_info"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="137dp"
        android:paddingLeft="20dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/surnameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="-137dp"
        android:paddingLeft="20dp"
        android:text="@string/surname" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surnameTextView"
        android:paddingLeft="20dp"
        android:text="@string/e_mail" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextView"
        android:paddingLeft="20dp"
        android:text="@string/location" />
    <Button
        android:id="@+id/logOutButton"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="#929ee1"
        android:text="Log out" />

</RelativeLayout>